# GoGooTe

./: CMakeLists.txt  README.md
cmake/: functions.cmake  version.cmake
doc/: gogoote-design.adoc  high-level-design.plantuml  initial-functional-decomposition-to-identify-questions.dot  parsing-structure.plantuml  test-model.plantuml
include/gogoote/: File.h  Files.h  Tool.h  Version.h
include/gogoote/cppunit/: TestCaseFinder.h
include/gogoote/model/: Assertion.h  ITestApplication.h  ModelItem.h  TestCase.h  TestFixture.h  TestSuite.h
include/gogoote/tool/: File.h  FileWriter.h  Files.h  TestApplication.h  Tool.h
src/: CMakeLists.txt  File.cpp  Files.cpp  Tool.cpp  Version.cpp  main.cpp
src/cppunit/: TestCaseFinder.cpp
src/model/: Assertion.cpp  TestCase.cpp  TestFixture.cpp  TestSuite.cpp
src/tool/: File.cpp  FileWriter.cpp  Files.cpp  TestApplication.cpp  Tool.cpp
test/: AssertionTest.cpp  CMakeLists.txt  TestSuiteTest.cpp
test-lit/: CMakeLists.txt  lit.cfg  test-file-exists-unix.sh
test-lit/tests/: .gitignore  after-converting-cppunit-testcase-single-gtest-test-exists.cpp  on-convert-cppunit-test-case-assertion-is-converted.cpp  on-convert-cppunit-testcase-new-gtest-file-exists.cpp  on-convert-cppunit-testcase-single-gtest-test-exists.cpp  on-convert-cppunit-testfixture-new-gtest-file-exists.cpp  on-convert-cppunit-testfixture-setup-teardown-exists.cpp
